# taskon

./: .env.example  README.md  install_macos.sh  pyproject.toml  start_macos.sh
bot/taskon/: account.py
bot/taskon/scripts/: campaign.py  helpers.py
src/: main.py  verification_api.py
src/taskon/: __init__.py  api.py
