[tool.poetry]
name = "taskon"
version = "0.5.0"
description = ""
authors = ["critol-lab <noreply@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
questionary = "^2.0.0"
tqdm = "^4.66.1"
loguru = "^0.7.0"
pydantic = "^2.2.1"
better-web3 = "^3.0.5"
better-automation = "^0.4.2"
better-proxy = "^0.2.0"
pandas = "^2.0.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
web3 = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
